--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -108,6 +108,7 @@ server=/016sf.com/114.114.114.114
 server=/017837.com/114.114.114.114
 server=/01811ma.com/114.114.114.114
 server=/018520.com/114.114.114.114
+server=/019103.com/114.114.114.114
 server=/0196.net/114.114.114.114
 server=/01amlink.site/114.114.114.114
 server=/01bzw.us/114.114.114.114
