--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -242,6 +242,7 @@ server=/027cloud.com/114.114.114.114
 server=/027dir.com/114.114.114.114
 server=/027down.com/114.114.114.114
 server=/027eat.com/114.114.114.114
+server=/027g3nkf40.com/114.114.114.114
 server=/027hhl.com/114.114.114.114
 server=/027hpedu.com/114.114.114.114
 server=/027hpit.com/114.114.114.114
