accelerated-domains: add 0531kt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -406,6 +406,7 @@ server=/052yx.com/114.114.114.114
 server=/0531.com/114.114.114.114
 server=/053135.com/114.114.114.114
 server=/0531jb.com/114.114.114.114
+server=/0531kt.com/114.114.114.114
 server=/0531lx.com/114.114.114.114
 server=/0531soso.com/114.114.114.114
 server=/0531wenxiu.com/114.114.114.114
