accelerated-domains: add 0551huayanbdf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -432,6 +432,7 @@ server=/0546tx.com/114.114.114.114
 server=/0550.com/114.114.114.114
 server=/055110.com/114.114.114.114
 server=/055178.com/114.114.114.114
+server=/0551huayanbdf.com/114.114.114.114
 server=/0551wl.com/114.114.114.114
 server=/0551zp.com/114.114.114.114
 server=/0552jie.com/114.114.114.114
