accelerated-domains: add 0r17374.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -786,6 +786,7 @@ server=/0kee.com/114.114.114.114
 server=/0kkkkkt.com/114.114.114.114
 server=/0nu2yo.com/114.114.114.114
 server=/0pdsa.icu/114.114.114.114
+server=/0r17374.com/114.114.114.114
 server=/0rg.pw/114.114.114.114
 server=/0rl.cc/114.114.114.114
 server=/0rz.ltd/114.114.114.114
