--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1499,6 +1499,7 @@ server=/148com.com/114.114.114.114
 server=/148la.com/114.114.114.114
 server=/14944.net/114.114.114.114
 server=/1495039.com/114.114.114.114
+server=/1495c8.com/114.114.114.114
 server=/14hj.com/114.114.114.114
 server=/14kjin.com/114.114.114.114
 server=/14xd.com/114.114.114.114
