--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1586,6 +1586,7 @@ server=/163888.net/114.114.114.114
 server=/163987.com/114.114.114.114
 server=/163adl.com/114.114.114.114
 server=/163cdn.com/114.114.114.114
+server=/163cms.com/114.114.114.114
 server=/163cn.link/114.114.114.114
 server=/163cn.tv/114.114.114.114
 server=/163cp.com/114.114.114.114
