--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1598,6 +1598,7 @@ server=/163img.com/114.114.114.114
 server=/163jiasu.com/114.114.114.114
 server=/163k.cc/114.114.114.114
 server=/163k.com/114.114.114.114
+server=/163kada.com/114.114.114.114
 server=/163lady.com/114.114.114.114
 server=/163mail.cc/114.114.114.114
 server=/163mail.net/114.114.114.114
