accelerated-domains: add 163mail.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1601,6 +1601,7 @@ server=/163k.com/114.114.114.114
 server=/163kada.com/114.114.114.114
 server=/163lady.com/114.114.114.114
 server=/163mail.cc/114.114.114.114
+server=/163mail.com/114.114.114.114
 server=/163mail.net/114.114.114.114
 server=/163ns.com/114.114.114.114
 server=/163pinglun.com/114.114.114.114
