--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1603,6 +1603,7 @@ server=/163lady.com/114.114.114.114
 server=/163mail.cc/114.114.114.114
 server=/163mail.com/114.114.114.114
 server=/163mail.net/114.114.114.114
+server=/163nos.com/114.114.114.114
 server=/163ns.com/114.114.114.114
 server=/163pinglun.com/114.114.114.114
 server=/163py.com/114.114.114.114
