--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1798,6 +1798,7 @@ server=/176mcng.xyz/114.114.114.114
 server=/176quan.com/114.114.114.114
 server=/1773.com/114.114.114.114
 server=/1778.com/114.114.114.114
+server=/177o.com/114.114.114.114
 server=/177xfb.com/114.114.114.114
 server=/178.com/114.114.114.114
 server=/178.net/114.114.114.114
