accelerated-domains: add 189qas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -2076,6 +2076,7 @@ server=/189che.com/114.114.114.114
 server=/189cube.com/114.114.114.114
 server=/189ebuy.com/114.114.114.114
 server=/189jxt.com/114.114.114.114
+server=/189qas.com/114.114.114.114
 server=/189read.com/114.114.114.114
 server=/189sec.com/114.114.114.114
 server=/189smarthome.com/114.114.114.114
