--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -2262,6 +2262,7 @@ server=/1huwai.me/114.114.114.114
 server=/1hwz.com/114.114.114.114
 server=/1iohncj.xyz/114.114.114.114
 server=/1iptv.com/114.114.114.114
+server=/1iuh5l.com/114.114.114.114
 server=/1j1x.com/114.114.114.114
 server=/1j8.net/114.114.114.114
 server=/1jbest.com/114.114.114.114
