accelerated-domains: add 2efgcdcjr000.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -2967,6 +2967,7 @@ server=/2dph.com/114.114.114.114
 server=/2du.net/114.114.114.114
 server=/2dyou.com/114.114.114.114
 server=/2ed5d.com/114.114.114.114
+server=/2efgcdcjr000.fun/114.114.114.114
 server=/2eka.cloud/114.114.114.114
 server=/2emlfo.com/114.114.114.114
 server=/2f.com/114.114.114.114
