accelerated-domains: add 2z96vx20bx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3047,6 +3047,7 @@ server=/2yq.org/114.114.114.114
 server=/2yuanyy.com/114.114.114.114
 server=/2yup.com/114.114.114.114
 server=/2yx8.com/114.114.114.114
+server=/2z96vx20bx.com/114.114.114.114
 server=/2zhan.com/114.114.114.114
 server=/2zhk.com/114.114.114.114
 server=/2zimu.com/114.114.114.114
