accelerated-domains: add 35vc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3423,6 +3423,7 @@ server=/35nic.com/114.114.114.114
 server=/35pic.com/114.114.114.114
 server=/35q.com/114.114.114.114
 server=/35sf.com/114.114.114.114
+server=/35vc.com/114.114.114.114
 server=/35xss.com/114.114.114.114
 server=/35xt.com/114.114.114.114
 server=/35zww.com/114.114.114.114
