--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3463,6 +3463,7 @@ server=/360chou.com/114.114.114.114
 server=/360cloudwaf.com/114.114.114.114
 server=/360daikuan.com/114.114.114.114
 server=/360ddj.com/114.114.114.114
+server=/360dlcdn.com/114.114.114.114
 server=/360doc.com/114.114.114.114
 server=/360doc.net/114.114.114.114
 server=/360doc1.net/114.114.114.114
