--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3470,6 +3470,7 @@ server=/360doc1.net/114.114.114.114
 server=/360doc2.net/114.114.114.114
 server=/360doc25.net/114.114.114.114
 server=/360doc30.net/114.114.114.114
+server=/360doc36.net/114.114.114.114
 server=/360doc4.net/114.114.114.114
 server=/360doc7.net/114.114.114.114
 server=/360docs.net/114.114.114.114
