--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3500,6 +3500,7 @@ server=/360imgcdn.com/114.114.114.114
 server=/360in.com/114.114.114.114
 server=/360insurancemall.com/114.114.114.114
 server=/360jie.com/114.114.114.114
+server=/360jinrong.net/114.114.114.114
 server=/360jq.com/114.114.114.114
 server=/360jrjietiao.com/114.114.114.114
 server=/360jrkt.com/114.114.114.114
