--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3546,6 +3546,7 @@ server=/360sou.net/114.114.114.114
 server=/360soucha.com/114.114.114.114
 server=/360sousou.com/114.114.114.114
 server=/360sportwatches.com/114.114.114.114
+server=/360src.com/114.114.114.114
 server=/360sres.com/114.114.114.114
 server=/360stamp.com/114.114.114.114
 server=/360taojin.com/114.114.114.114
