accelerated-domains: add 360xyws.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3577,6 +3577,7 @@ server=/360xlab.com/114.114.114.114
 server=/360xlab.net/114.114.114.114
 server=/360xlab.org/114.114.114.114
 server=/360xs.com/114.114.114.114
+server=/360xyws.com/114.114.114.114
 server=/360yao.com/114.114.114.114
 server=/360ybj.com/114.114.114.114
 server=/360yfw.com/114.114.114.114
