--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3589,6 +3589,7 @@ server=/360zhileng.com/114.114.114.114
 server=/360zhushou.com/114.114.114.114
 server=/360zhyx.com/114.114.114.114
 server=/360zmr.com/114.114.114.114
+server=/360zqaq.com/114.114.114.114
 server=/360zuowen.com/114.114.114.114
 server=/36130.com/114.114.114.114
 server=/361757.com/114.114.114.114
