accelerated-domains: add 36gv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3733,6 +3733,7 @@ server=/36aw.com/114.114.114.114
 server=/36dianping.com/114.114.114.114
 server=/36dj.com/114.114.114.114
 server=/36dong.com/114.114.114.114
+server=/36gv.com/114.114.114.114
 server=/36hjob.com/114.114.114.114
 server=/36jr.com/114.114.114.114
 server=/36kr.com/114.114.114.114
