accelerated-domains: add 38c99.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3835,6 +3835,7 @@ server=/3892222.com/114.114.114.114
 server=/3899.net/114.114.114.114
 server=/38999h.vip/114.114.114.114
 server=/38blog.com/114.114.114.114
+server=/38c99.com/114.114.114.114
 server=/38ejed.com/114.114.114.114
 server=/38film.com/114.114.114.114
 server=/38hack.com/114.114.114.114
