--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3844,6 +3844,7 @@ server=/38hp.com/114.114.114.114
 server=/38hzt.com/114.114.114.114
 server=/38ljkoi.xyz/114.114.114.114
 server=/38mhw.com/114.114.114.114
+server=/38ra.com/114.114.114.114
 server=/38xs.com/114.114.114.114
 server=/39.com/114.114.114.114
 server=/39.net/114.114.114.114
