--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3884,6 +3884,7 @@ server=/39fengliao.com/114.114.114.114
 server=/39h83s.com/114.114.114.114
 server=/39health.com/114.114.114.114
 server=/39jks.com/114.114.114.114
+server=/39jz.com/114.114.114.114
 server=/39kan.com/114.114.114.114
 server=/39kf.com/114.114.114.114
 server=/39meitu.com/114.114.114.114
