--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3966,6 +3966,7 @@ server=/3dxy.net/114.114.114.114
 server=/3dzyw.com/114.114.114.114
 server=/3e.net/114.114.114.114
 server=/3edns.com/114.114.114.114
+server=/3elife.net/114.114.114.114
 server=/3eyes.org/114.114.114.114
 server=/3fang.com/114.114.114.114
 server=/3fantizi.com/114.114.114.114
