--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3994,6 +3994,7 @@ server=/3h1i.com/114.114.114.114
 server=/3h3.com/114.114.114.114
 server=/3h77.com/114.114.114.114
 server=/3heyun.com/114.114.114.114
+server=/3hgui.com/114.114.114.114
 server=/3hmlg.com/114.114.114.114
 server=/3i2i.com/114.114.114.114
 server=/3i8uiq2w.work/114.114.114.114
