--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4039,6 +4039,7 @@ server=/3pw.net/114.114.114.114
 server=/3q2008.com/114.114.114.114
 server=/3qhouse.com/114.114.114.114
 server=/3qj.com/114.114.114.114
+server=/3qqq.net/114.114.114.114
 server=/3qwe.com/114.114.114.114
 server=/3qzone.cc/114.114.114.114
 server=/3r1kwxcd.top/114.114.114.114
