--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4180,6 +4180,7 @@ server=/400num.com/114.114.114.114
 server=/400qikan.com/114.114.114.114
 server=/400vv.com/114.114.114.114
 server=/400web.com/114.114.114.114
+server=/401aww.com/114.114.114.114
 server=/4020.ee/114.114.114.114
 server=/40407.com/114.114.114.114
 server=/404600.com/114.114.114.114
