accelerated-domains: add 51ideal.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4841,6 +4841,7 @@ server=/51hwzy.com/114.114.114.114
 server=/51ibm.com/114.114.114.114
 server=/51ican.com/114.114.114.114
 server=/51idc.com/114.114.114.114
+server=/51ideal.com/114.114.114.114
 server=/51ifind.com/114.114.114.114
 server=/51ifonts.com/114.114.114.114
 server=/51ihome.com/114.114.114.114
