--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5008,6 +5008,7 @@ server=/51sai.com/114.114.114.114
 server=/51sanhu.com/114.114.114.114
 server=/51sao.net/114.114.114.114
 server=/51school.com/114.114.114.114
+server=/51scw.net/114.114.114.114
 server=/51sdj.com/114.114.114.114
 server=/51sdjob.com/114.114.114.114
 server=/51sdx.com/114.114.114.114
