accelerated-domains: add 52lvgucci.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5409,6 +5409,7 @@ server=/52life.cc/114.114.114.114
 server=/52linglong.com/114.114.114.114
 server=/52lion.com/114.114.114.114
 server=/52luohu.com/114.114.114.114
+server=/52lvgucci.com/114.114.114.114
 server=/52lvyou.com/114.114.114.114
 server=/52m.co/114.114.114.114
 server=/52mac.com/114.114.114.114
