--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5654,6 +5654,7 @@ server=/555edu.net/114.114.114.114
 server=/555ppp777ppp.com/114.114.114.114
 server=/555yst.com/114.114.114.114
 server=/5566.net/114.114.114.114
+server=/5566ua.com/114.114.114.114
 server=/5567.me/114.114.114.114
 server=/556z.com/114.114.114.114
 server=/557.net/114.114.114.114
