--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6114,6 +6114,7 @@ server=/5j.com/114.114.114.114
 server=/5jingcai.com/114.114.114.114
 server=/5jinzhishu.com/114.114.114.114
 server=/5jjdw.com/114.114.114.114
+server=/5jjx.net/114.114.114.114
 server=/5jli.com/114.114.114.114
 server=/5jue.com/114.114.114.114
 server=/5jwl.com/114.114.114.114
