--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6613,6 +6613,7 @@ server=/68tiyu.com/114.114.114.114
 server=/68u.co/114.114.114.114
 server=/68web.net/114.114.114.114
 server=/68websoft.com/114.114.114.114
+server=/68yscw.com/114.114.114.114
 server=/68zhan.net/114.114.114.114
 server=/68zixun.com/114.114.114.114
 server=/69.com/114.114.114.114
