--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6676,6 +6676,7 @@ server=/6du.in/114.114.114.114
 server=/6duoyu.com/114.114.114.114
 server=/6eat.com/114.114.114.114
 server=/6edigital.com/114.114.114.114
+server=/6efgcdcjr000.fun/114.114.114.114
 server=/6fcsj.com/114.114.114.114
 server=/6ft8a.icu/114.114.114.114
 server=/6g5fd1a.com/114.114.114.114
