--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7157,6 +7157,7 @@ server=/7fgame.com/114.114.114.114
 server=/7flowers.com/114.114.114.114
 server=/7forz.com/114.114.114.114
 server=/7fresh.com/114.114.114.114
+server=/7gg.cc/114.114.114.114
 server=/7glb.com/114.114.114.114
 server=/7gongzhu.net/114.114.114.114
 server=/7gugu.com/114.114.114.114
