--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7243,6 +7243,7 @@ server=/7wee.com/114.114.114.114
 server=/7wenku.com/114.114.114.114
 server=/7wenta.com/114.114.114.114
 server=/7wenyi.com/114.114.114.114
+server=/7wkw.com/114.114.114.114
 server=/7wnews.com/114.114.114.114
 server=/7wsh.com/114.114.114.114
 server=/7wsh.net/114.114.114.114
