--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7799,6 +7799,7 @@ server=/8btc-ops.com/114.114.114.114
 server=/8btc.com/114.114.114.114
 server=/8btm.com/114.114.114.114
 server=/8cname.com/114.114.114.114
+server=/8cnd.com/114.114.114.114
 server=/8cnet.com/114.114.114.114
 server=/8crwki8e.com/114.114.114.114
 server=/8ddao.com/114.114.114.114
