--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7807,6 +7807,7 @@ server=/8dei.com/114.114.114.114
 server=/8dexpress.com/114.114.114.114
 server=/8dn.com/114.114.114.114
 server=/8dol.com/114.114.114.114
+server=/8dp.net/114.114.114.114
 server=/8dream.net/114.114.114.114
 server=/8dt.com/114.114.114.114
 server=/8dudata.com/114.114.114.114
