accelerated-domains: add 91adv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7986,6 +7986,7 @@ server=/9191zx.com/114.114.114.114
 server=/91985.com/114.114.114.114
 server=/91ac.com/114.114.114.114
 server=/91act.com/114.114.114.114
+server=/91adv.com/114.114.114.114
 server=/91ajs.com/114.114.114.114
 server=/91all.net/114.114.114.114
 server=/91anjian.com/114.114.114.114
