--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -8043,6 +8043,7 @@ server=/91health.net/114.114.114.114
 server=/91hecheng.com/114.114.114.114
 server=/91hmi.com/114.114.114.114
 server=/91huayi.com/114.114.114.114
+server=/91huayi.net/114.114.114.114
 server=/91hui.com/114.114.114.114
 server=/91huifu.com/114.114.114.114
 server=/91huoke.com/114.114.114.114
