--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -8089,6 +8089,7 @@ server=/91maibiao.com/114.114.114.114
 server=/91mariadb.com/114.114.114.114
 server=/91maths.com/114.114.114.114
 server=/91meitu.com/114.114.114.114
+server=/91mh.me/114.114.114.114
 server=/91miaoshou.com/114.114.114.114
 server=/91muzhi.com/114.114.114.114
 server=/91ninthpalace.com/114.114.114.114
