accelerated-domains: add 92to.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -8232,6 +8232,7 @@ server=/92ni.com/114.114.114.114
 server=/92shuoshuo.com/114.114.114.114
 server=/92sucai.com/114.114.114.114
 server=/92tianjin.com/114.114.114.114
+server=/92to.com/114.114.114.114
 server=/92txt.cc/114.114.114.114
 server=/92u93e.com/114.114.114.114
 server=/92wan.com/114.114.114.114
