accelerated-domains: add 9dreams.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -8788,6 +8788,7 @@ server=/9dian.info/114.114.114.114
 server=/9dida.net/114.114.114.114
 server=/9dinn.com/114.114.114.114
 server=/9douyu.com/114.114.114.114
+server=/9dreams.net/114.114.114.114
 server=/9droom.com/114.114.114.114
 server=/9duw.com/114.114.114.114
 server=/9dwork.com/114.114.114.114
