accelerated-domains: add a1714.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -8947,6 +8947,7 @@ server=/a0c77.com/114.114.114.114
 server=/a0usa.top/114.114.114.114
 server=/a135.net/114.114.114.114
 server=/a166.com/114.114.114.114
+server=/a1714.com/114.114.114.114
 server=/a18.ltd/114.114.114.114
 server=/a1bw2cup.top/114.114.114.114
 server=/a1coin.xyz/114.114.114.114
