--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -8957,6 +8957,7 @@ server=/a21yishion.com/114.114.114.114
 server=/a2830.com/114.114.114.114
 server=/a2dongman.com/114.114.114.114
 server=/a2wx.icu/114.114.114.114
+server=/a3p4.net/114.114.114.114
 server=/a48425084.com/114.114.114.114
 server=/a49.net/114.114.114.114
 server=/a4enwyh.xyz/114.114.114.114
