--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9000,6 +9000,7 @@ server=/aa778899aa.com/114.114.114.114
 server=/aa77kk.com/114.114.114.114
 server=/aa8828.com/114.114.114.114
 server=/aaalawfirm.com/114.114.114.114
+server=/aaalian.com/114.114.114.114
 server=/aaareplicawatch.com/114.114.114.114
 server=/aaayu.com/114.114.114.114
 server=/aaayun.com/114.114.114.114
