--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9009,6 +9009,7 @@ server=/aabqm.com/114.114.114.114
 server=/aabqn.com/114.114.114.114
 server=/aabux.com/114.114.114.114
 server=/aad5.com/114.114.114.114
+server=/aadcloud.com/114.114.114.114
 server=/aadongman.com/114.114.114.114
 server=/aads-cng.net/114.114.114.114
 server=/aafanke.cc/114.114.114.114
