accelerated-domains: add abcd789.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9061,6 +9061,7 @@ server=/abc188.com/114.114.114.114
 server=/abc369.net/114.114.114.114
 server=/abc4game.com/114.114.114.114
 server=/abcache.com/114.114.114.114
+server=/abcd789.com/114.114.114.114
 server=/abcdao.com/114.114.114.114
 server=/abcdocker.com/114.114.114.114
 server=/abcdv.net/114.114.114.114
