accelerated-domains: add abeij.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9087,6 +9087,7 @@ server=/abddn.com/114.114.114.114
 server=/abdstem.com/114.114.114.114
 server=/abe-tech.com/114.114.114.114
 server=/abeacon.com/114.114.114.114
+server=/abeij.com/114.114.114.114
 server=/abesmoke.com/114.114.114.114
 server=/abiaogw.com/114.114.114.114
 server=/abiechina.com/114.114.114.114
