accelerated-domains: add abhouses.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9089,6 +9089,7 @@ server=/abe-tech.com/114.114.114.114
 server=/abeacon.com/114.114.114.114
 server=/abeij.com/114.114.114.114
 server=/abesmoke.com/114.114.114.114
+server=/abhouses.com/114.114.114.114
 server=/abiaogw.com/114.114.114.114
 server=/abiechina.com/114.114.114.114
 server=/abiestem.com/114.114.114.114
