--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9215,6 +9215,7 @@ server=/acgz.xyz/114.114.114.114
 server=/acgzc.com/114.114.114.114
 server=/acgzyj.com/114.114.114.114
 server=/achiming.com/114.114.114.114
+server=/achuc.com/114.114.114.114
 server=/acing.com/114.114.114.114
 server=/acingame.com/114.114.114.114
 server=/acirclea.com/114.114.114.114
