accelerated-domains: add ad-diamond.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9282,6 +9282,7 @@ server=/acwlkj.com/114.114.114.114
 server=/acxk.net/114.114.114.114
 server=/acz.asia/114.114.114.114
 server=/ad-cn.net/114.114.114.114
+server=/ad-diamond.com/114.114.114.114
 server=/ad-gone.com/114.114.114.114
 server=/ad-goods.com/114.114.114.114
 server=/ad-safe.com/114.114.114.114
