accelerated-domains: add adbana.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9304,6 +9304,7 @@ server=/adaog.com/114.114.114.114
 server=/adapay.tech/114.114.114.114
 server=/adarrive.com/114.114.114.114
 server=/adaxin.com/114.114.114.114
+server=/adbana.com/114.114.114.114
 server=/adbgz.com/114.114.114.114
 server=/adbiding.com/114.114.114.114
 server=/adbkwai.com/114.114.114.114
