accelerated-domains: add adjwl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9352,6 +9352,7 @@ server=/adjie.com/114.114.114.114
 server=/adjtht.com/114.114.114.114
 server=/adjucai.com/114.114.114.114
 server=/adjuz.com/114.114.114.114
+server=/adjwl.com/114.114.114.114
 server=/adkjpx.com/114.114.114.114
 server=/adkwai.com/114.114.114.114
 server=/adl163.com/114.114.114.114
