--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9428,6 +9428,7 @@ server=/adtchrome.com/114.114.114.114
 server=/adtianmai.com/114.114.114.114
 server=/adtime.com/114.114.114.114
 server=/adtmm.com/114.114.114.114
+server=/adtrgt.com/114.114.114.114
 server=/adtxl.com/114.114.114.114
 server=/aduan.cc/114.114.114.114
 server=/adubest.com/114.114.114.114
