accelerated-domains: add adyea.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9468,6 +9468,7 @@ server=/adxquare.com/114.114.114.114
 server=/adxvip.com/114.114.114.114
 server=/adxwork.com/114.114.114.114
 server=/adxyun.com/114.114.114.114
+server=/adyea.com/114.114.114.114
 server=/adyoc.com/114.114.114.114
 server=/adyounger.com/114.114.114.114
 server=/adyuedong.com/114.114.114.114
