--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9510,6 +9510,7 @@ server=/aerdai.com/114.114.114.114
 server=/aerfaying.com/114.114.114.114
 server=/aero-shenyang.com/114.114.114.114
 server=/aerochina.net/114.114.114.114
+server=/aeryt111.fun/114.114.114.114
 server=/aesdrink.com/114.114.114.114
 server=/aestheticbutler.xyz/114.114.114.114
 server=/aesucai.com/114.114.114.114
