--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9640,6 +9640,7 @@ server=/ahcaw.com/114.114.114.114
 server=/ahcnb.com/114.114.114.114
 server=/ahcoating.com/114.114.114.114
 server=/ahcyfc.com/114.114.114.114
+server=/ahd.so/114.114.114.114
 server=/ahdahda.com/114.114.114.114
 server=/ahdci.com/114.114.114.114
 server=/ahdf56.com/114.114.114.114
