accelerated-domains: add aicccloud.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9827,6 +9827,7 @@ server=/aicai.com/114.114.114.114
 server=/aicaicdn.com/114.114.114.114
 server=/aicailang.com/114.114.114.114
 server=/aicait.com/114.114.114.114
+server=/aicccloud.com/114.114.114.114
 server=/aicdn.com/114.114.114.114
 server=/aicdn.work/114.114.114.114
 server=/aicdn2.com/114.114.114.114
