accelerated-domains: add aiia.xin

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9974,6 +9974,7 @@ server=/aihubs.net/114.114.114.114
 server=/aihuhua.com/114.114.114.114
 server=/aihuishou.com/114.114.114.114
 server=/aii-alliance.org/114.114.114.114
+server=/aiia.xin/114.114.114.114
 server=/aiibii.com/114.114.114.114
 server=/aiijournal.com/114.114.114.114
 server=/aiimg.com/114.114.114.114
