--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10168,6 +10168,7 @@ server=/aisharenet.com/114.114.114.114
 server=/aishdxz.com/114.114.114.114
 server=/aishengji.com/114.114.114.114
 server=/aishenhua.com/114.114.114.114
+server=/aishiguolong.com/114.114.114.114
 server=/aishuge.cc/114.114.114.114
 server=/aishuge.la/114.114.114.114
 server=/aishushu3.com/114.114.114.114
