accelerated-domains: add akjunshi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10375,6 +10375,7 @@ server=/aki-game2.com/114.114.114.114
 server=/aki-game2.net/114.114.114.114
 server=/akile.net/114.114.114.114
 server=/akjianding.com/114.114.114.114
+server=/akjunshi.com/114.114.114.114
 server=/akkogear.com/114.114.114.114
 server=/aklyw.com/114.114.114.114
 server=/akng.net/114.114.114.114
