accelerated-domains: add alightin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10516,6 +10516,7 @@ server=/aligames.com/114.114.114.114
 server=/aligaofang.com/114.114.114.114
 server=/aligenie.com/114.114.114.114
 server=/aligfwaf.com/114.114.114.114
+server=/alightin.com/114.114.114.114
 server=/alighting.com/114.114.114.114
 server=/alihd.net/114.114.114.114
 server=/alihealth.hk/114.114.114.114
