accelerated-domains: add alixiaomi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10595,6 +10595,7 @@ server=/aliwd.com/114.114.114.114
 server=/aliwears.com/114.114.114.114
 server=/aliwork.com/114.114.114.114
 server=/aliwx.net/114.114.114.114
+server=/alixiaomi.com/114.114.114.114
 server=/alixiaoyouhui.com/114.114.114.114
 server=/alixixi.com/114.114.114.114
 server=/alixox.com/114.114.114.114
