accelerated-domains: add allinbots.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10766,6 +10766,7 @@ server=/allhistory.com/114.114.114.114
 server=/alliancebrh.com/114.114.114.114
 server=/allianz360.com/114.114.114.114
 server=/allicdata.com/114.114.114.114
+server=/allinbots.com/114.114.114.114
 server=/allinfinance.com/114.114.114.114
 server=/allinpay.com/114.114.114.114
 server=/allinpaygx.com/114.114.114.114
