--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11105,6 +11105,7 @@ server=/anonym-hi.com/114.114.114.114
 server=/anosmcloud.com/114.114.114.114
 server=/anoyi.com/114.114.114.114
 server=/anpingwanzhong.com/114.114.114.114
+server=/anpu119.com/114.114.114.114
 server=/anpush.com/114.114.114.114
 server=/anpuzx.com/114.114.114.114
 server=/anqingonline.com/114.114.114.114
