accelerated-domains: add ardmall.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11716,6 +11716,7 @@ server=/arcticray.com/114.114.114.114
 server=/arctiler.com/114.114.114.114
 server=/arctime.org/114.114.114.114
 server=/ard-china.com/114.114.114.114
+server=/ardmall.com/114.114.114.114
 server=/ardsec.com/114.114.114.114
 server=/areader.com/114.114.114.114
 server=/arealx.com/114.114.114.114
