accelerated-domains: add attendees.link

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12062,6 +12062,7 @@ server=/atstudy.com/114.114.114.114
 server=/atsws.com/114.114.114.114
 server=/attacker.fit/114.114.114.114
 server=/attainsgroup.com/114.114.114.114
+server=/attendees.link/114.114.114.114
 server=/atticuslab.com/114.114.114.114
 server=/attri.mobi/114.114.114.114
 server=/atukjhesk.com/114.114.114.114
