--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12116,6 +12116,7 @@ server=/auroapi.com/114.114.114.114
 server=/auromcs.com/114.114.114.114
 server=/aurora-jy.com/114.114.114.114
 server=/aurumdriver.vip/114.114.114.114
+server=/aus.cc/114.114.114.114
 server=/ausaview.com/114.114.114.114
 server=/ausbio.com/114.114.114.114
 server=/ausca-oils.com/114.114.114.114
