accelerated-domains: add axa123.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12357,6 +12357,7 @@ server=/awyx.xyz/114.114.114.114
 server=/ax196.com/114.114.114.114
 #server=/ax1x.com/114.114.114.114 # Disabled: https://github.com/felixonmars/dnsmasq-china-list/issues/391
 server=/ax2nc4.ren/114.114.114.114
+server=/axa123.com/114.114.114.114
 server=/axatp.com/114.114.114.114
 server=/axbsec.com/114.114.114.114
 server=/axbur.com/114.114.114.114
