accelerated-domains: add azchcdnl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12451,6 +12451,7 @@ server=/azchcdnc.com/114.114.114.114
 server=/azchcdng.com/114.114.114.114
 server=/azchcdnh.com/114.114.114.114
 server=/azchcdnj.com/114.114.114.114
+server=/azchcdnl.com/114.114.114.114
 server=/azchcdnm.com/114.114.114.114
 server=/azf010.com/114.114.114.114
 server=/azhimalayanvh.com/114.114.114.114
