--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12453,6 +12453,7 @@ server=/azchcdnh.com/114.114.114.114
 server=/azchcdnj.com/114.114.114.114
 server=/azchcdnl.com/114.114.114.114
 server=/azchcdnm.com/114.114.114.114
+server=/azchcdnn.com/114.114.114.114
 server=/azf010.com/114.114.114.114
 server=/azhimalayanvh.com/114.114.114.114
 server=/azhituo.com/114.114.114.114
