--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12454,6 +12454,7 @@ server=/azchcdnj.com/114.114.114.114
 server=/azchcdnl.com/114.114.114.114
 server=/azchcdnm.com/114.114.114.114
 server=/azchcdnn.com/114.114.114.114
+server=/azchcdno.com/114.114.114.114
 server=/azf010.com/114.114.114.114
 server=/azhimalayanvh.com/114.114.114.114
 server=/azhituo.com/114.114.114.114
