accelerated-domains: add azchcdnp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12455,6 +12455,7 @@ server=/azchcdnl.com/114.114.114.114
 server=/azchcdnm.com/114.114.114.114
 server=/azchcdnn.com/114.114.114.114
 server=/azchcdno.com/114.114.114.114
+server=/azchcdnp.com/114.114.114.114
 server=/azf010.com/114.114.114.114
 server=/azhimalayanvh.com/114.114.114.114
 server=/azhituo.com/114.114.114.114
