accelerated-domains: add azchcdnq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12456,6 +12456,7 @@ server=/azchcdnm.com/114.114.114.114
 server=/azchcdnn.com/114.114.114.114
 server=/azchcdno.com/114.114.114.114
 server=/azchcdnp.com/114.114.114.114
+server=/azchcdnq.com/114.114.114.114
 server=/azf010.com/114.114.114.114
 server=/azhimalayanvh.com/114.114.114.114
 server=/azhituo.com/114.114.114.114
