--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12458,6 +12458,7 @@ server=/azchcdno.com/114.114.114.114
 server=/azchcdnp.com/114.114.114.114
 server=/azchcdnq.com/114.114.114.114
 server=/azchcdnr.com/114.114.114.114
+server=/azchcdns.com/114.114.114.114
 server=/azf010.com/114.114.114.114
 server=/azhimalayanvh.com/114.114.114.114
 server=/azhituo.com/114.114.114.114
