--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12506,6 +12506,7 @@ server=/b2b168.org/114.114.114.114
 server=/b2b3.com/114.114.114.114
 server=/b2b6.com/114.114.114.114
 server=/b2b818.com/114.114.114.114
+server=/b2bgo.com/114.114.114.114
 server=/b2bic.com/114.114.114.114
 server=/b2bname.com/114.114.114.114
 server=/b2bvip.com/114.114.114.114
