--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12518,6 +12518,7 @@ server=/b2clouds.com/114.114.114.114
 server=/b2jiaxiao.com/114.114.114.114
 server=/b2q.com/114.114.114.114
 server=/b2star.com/114.114.114.114
+server=/b3bos.com/114.114.114.114
 server=/b3inside.com/114.114.114.114
 server=/b3logfile.com/114.114.114.114
 server=/b4882.com/114.114.114.114
