--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12533,6 +12533,7 @@ server=/b612.me/114.114.114.114
 server=/b612kaji.com/114.114.114.114
 server=/b62.xyz/114.114.114.114
 server=/b6kfxga.com/114.114.114.114
+server=/b7av.com/114.114.114.114
 server=/b7l.cc/114.114.114.114
 server=/b8kk.com/114.114.114.114
 server=/b8th-hzvac3.com/114.114.114.114
