--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12557,6 +12557,7 @@ server=/babedy.com/114.114.114.114
 server=/babeijiu.com/114.114.114.114
 server=/babesters.com/114.114.114.114
 server=/babiguoguo.com/114.114.114.114
+server=/bablace.com/114.114.114.114
 server=/babolchina.com/114.114.114.114
 server=/baboshan.com/114.114.114.114
 server=/babsoft.net/114.114.114.114
