--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12672,6 +12672,7 @@ server=/baidu-wenxue.com/114.114.114.114
 server=/baidu.cc/114.114.114.114
 server=/baidu.cm/114.114.114.114
 server=/baidu.com/114.114.114.114
+server=/baidu.hk/114.114.114.114
 server=/baidu.jp/114.114.114.114
 server=/baidu.mobi/114.114.114.114
 server=/baidu.to/114.114.114.114
