--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12870,6 +12870,7 @@ server=/baitahe.net/114.114.114.114
 server=/baitaihuge.com/114.114.114.114
 server=/baitaiz.com/114.114.114.114
 server=/baitanheichang.com/114.114.114.114
+server=/baitaoidc.com/114.114.114.114
 server=/baitdu.com/114.114.114.114
 server=/baithu.com/114.114.114.114
 server=/baitianinfo.com/114.114.114.114
