--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12995,6 +12995,7 @@ server=/bandeyu.com/114.114.114.114
 server=/bandianli.com/114.114.114.114
 server=/bandoristation.com/114.114.114.114
 server=/bandvr.com/114.114.114.114
+server=/banfd.com/114.114.114.114
 server=/banfs.com/114.114.114.114
 server=/banfubbs.com/114.114.114.114
 server=/bangbang.com/114.114.114.114
