--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13094,6 +13094,7 @@ server=/banmasiwei.com/114.114.114.114
 server=/banmasrf.com/114.114.114.114
 server=/banmasusuan.com/114.114.114.114
 server=/banmayingyu.com/114.114.114.114
+server=/banmd.com/114.114.114.114
 server=/banmeng.com/114.114.114.114
 server=/banner668.com.hk/114.114.114.114
 server=/bannerbyten.com/114.114.114.114
