--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13423,6 +13423,7 @@ server=/bbmy.net/114.114.114.114
 server=/bbobo.com/114.114.114.114
 server=/bbonfire.com/114.114.114.114
 server=/bbosu.com/114.114.114.114
+server=/bbphonix.xyz/114.114.114.114
 server=/bbpu.com/114.114.114.114
 server=/bbq-strainer.com/114.114.114.114
 server=/bbqcdn.com/114.114.114.114
