accelerated-domains: add bbvjs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13459,6 +13459,7 @@ server=/bbtwatch.com/114.114.114.114
 server=/bbtydc.com/114.114.114.114
 server=/bbugifts.com/114.114.114.114
 server=/bbunion.com/114.114.114.114
+server=/bbvjs.com/114.114.114.114
 server=/bbw-portnet.com/114.114.114.114
 server=/bbwcec.com/114.114.114.114
 server=/bbwcq.com/114.114.114.114
