--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13557,6 +13557,7 @@ server=/bd001.net/114.114.114.114
 server=/bd689.com/114.114.114.114
 server=/bd7kzs.site/114.114.114.114
 server=/bdall.com/114.114.114.114
+server=/bdaor.com/114.114.114.114
 server=/bdapark.com/114.114.114.114
 server=/bdatu.com/114.114.114.114
 server=/bdbae.com/114.114.114.114
