accelerated-domains: add bddwm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13569,6 +13569,7 @@ server=/bdcloudapi.com/114.114.114.114
 server=/bdclouddns.com/114.114.114.114
 server=/bdcn-media.com/114.114.114.114
 server=/bdcqc.com/114.114.114.114
+server=/bddwm.com/114.114.114.114
 server=/bdebid.com/114.114.114.114
 server=/bdeceimg.com/114.114.114.114
 server=/bdegnine.com/114.114.114.114
