--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13760,6 +13760,7 @@ server=/beifangfoshifen.com/114.114.114.114
 server=/beifangjiaoyu.com/114.114.114.114
 server=/beifeng.com/114.114.114.114
 server=/beifuni.com/114.114.114.114
+server=/beifz.com/114.114.114.114
 server=/beigangyouxuan.com/114.114.114.114
 server=/beigedi.com/114.114.114.114
 server=/beigonggroup.com/114.114.114.114
