accelerated-domains: add benmi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13927,6 +13927,7 @@ server=/benlaisy.com/114.114.114.114
 server=/benliuxinwen.com/114.114.114.114
 server=/benlong.vip/114.114.114.114
 server=/benma.com/114.114.114.114
+server=/benmi.com/114.114.114.114
 server=/benmu-health.com/114.114.114.114
 server=/benniux.com/114.114.114.114
 server=/bennybu.fun/114.114.114.114
