--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13970,6 +13970,7 @@ server=/bersilion.com/114.114.114.114
 server=/bertadata.com/114.114.114.114
 server=/berui.com/114.114.114.114
 server=/berylbot.com/114.114.114.114
+server=/beryt111.fun/114.114.114.114
 server=/bes.ren/114.114.114.114
 server=/beschannels.com/114.114.114.114
 server=/besclouds.com/114.114.114.114
