--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13973,6 +13973,7 @@ server=/berylbot.com/114.114.114.114
 server=/beryt111.fun/114.114.114.114
 server=/bes.ren/114.114.114.114
 server=/beschannels.com/114.114.114.114
+server=/bescloud.com/114.114.114.114
 server=/besclouds.com/114.114.114.114
 server=/besg-bee.com/114.114.114.114
 server=/besget.com/114.114.114.114
