--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14037,6 +14037,7 @@ server=/bestugali.com/114.114.114.114
 server=/bestv6.com/114.114.114.114
 server=/bestvapp.com/114.114.114.114
 server=/bestvcdn.com/114.114.114.114
+server=/bestvcdn.net/114.114.114.114
 server=/bestvideocloud.com/114.114.114.114
 server=/bestviewstock.com/114.114.114.114
 server=/bestvist.com/114.114.114.114
