accelerated-domains: add bewaycare.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14074,6 +14074,7 @@ server=/betterzipcn.com/114.114.114.114
 server=/beuyinm.com/114.114.114.114
 server=/beva.com/114.114.114.114
 server=/bevol.com/114.114.114.114
+server=/bewaycare.com/114.114.114.114
 server=/bewellbio.com/114.114.114.114
 server=/bewg.net/114.114.114.114
 server=/bewgnn.com/114.114.114.114
