--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14109,6 +14109,7 @@ server=/bffzb.com/114.114.114.114
 server=/bfgho.com/114.114.114.114
 server=/bfhmj.com/114.114.114.114
 server=/bfhueh.top/114.114.114.114
+server=/bfhzmj.com/114.114.114.114
 server=/bfikuncdn.com/114.114.114.114
 server=/bfjr.com/114.114.114.114
 server=/bfnbgame.com/114.114.114.114
