--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14113,6 +14113,7 @@ server=/bfhzmj.com/114.114.114.114
 server=/bfikuncdn.com/114.114.114.114
 server=/bfjr.com/114.114.114.114
 server=/bfjxmajiang.com/114.114.114.114
+server=/bfjxmj.com/114.114.114.114
 server=/bfnbgame.com/114.114.114.114
 server=/bfnxxcdn.com/114.114.114.114
 server=/bfqh.com/114.114.114.114
