accelerated-domains: add bflschayuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14114,6 +14114,7 @@ server=/bfikuncdn.com/114.114.114.114
 server=/bfjr.com/114.114.114.114
 server=/bfjxmajiang.com/114.114.114.114
 server=/bfjxmj.com/114.114.114.114
+server=/bflschayuan.com/114.114.114.114
 server=/bfnbgame.com/114.114.114.114
 server=/bfnxxcdn.com/114.114.114.114
 server=/bfqh.com/114.114.114.114
