accelerated-domains: add bfningbo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14116,6 +14116,7 @@ server=/bfjxmajiang.com/114.114.114.114
 server=/bfjxmj.com/114.114.114.114
 server=/bflschayuan.com/114.114.114.114
 server=/bfnbgame.com/114.114.114.114
+server=/bfningbo.com/114.114.114.114
 server=/bfnxxcdn.com/114.114.114.114
 server=/bfqh.com/114.114.114.114
 server=/bfqifu.com/114.114.114.114
