accelerated-domains: add bfqqsg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14120,6 +14120,7 @@ server=/bfningbo.com/114.114.114.114
 server=/bfnxxcdn.com/114.114.114.114
 server=/bfqh.com/114.114.114.114
 server=/bfqifu.com/114.114.114.114
+server=/bfqqsg.com/114.114.114.114
 server=/bfsea.xyz/114.114.114.114
 server=/bfssj.com/114.114.114.114
 server=/bfsu-artery.net/114.114.114.114
