--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14121,6 +14121,7 @@ server=/bfnxxcdn.com/114.114.114.114
 server=/bfqh.com/114.114.114.114
 server=/bfqifu.com/114.114.114.114
 server=/bfqqsg.com/114.114.114.114
+server=/bfqtchayuan.com/114.114.114.114
 server=/bfsea.xyz/114.114.114.114
 server=/bfssj.com/114.114.114.114
 server=/bfsu-artery.net/114.114.114.114
