accelerated-domains: add bfsxmj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14126,6 +14126,7 @@ server=/bfsea.xyz/114.114.114.114
 server=/bfssj.com/114.114.114.114
 server=/bfsu-artery.net/114.114.114.114
 server=/bfsutw.com/114.114.114.114
+server=/bfsxmj.com/114.114.114.114
 server=/bft-robot.com/114.114.114.114
 server=/bft5mp.xyz/114.114.114.114
 server=/bftq.com/114.114.114.114
