--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14135,6 +14135,7 @@ server=/bftv.com/114.114.114.114
 server=/bfvvs.com/114.114.114.114
 server=/bfw.wiki/114.114.114.114
 server=/bfxiuxianqipai.com/114.114.114.114
+server=/bfypq.com/114.114.114.114
 server=/bfyx.com/114.114.114.114
 server=/bfyx.net/114.114.114.114
 server=/bfzhan.com/114.114.114.114
