accelerated-domains: add bgbg00.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14142,6 +14142,7 @@ server=/bfzhan.com/114.114.114.114
 server=/bg339.com/114.114.114.114
 server=/bg45.com/114.114.114.114
 server=/bg7ywl.com/114.114.114.114
+server=/bgbg00.fun/114.114.114.114
 server=/bgbjjtd.com/114.114.114.114
 server=/bgbk.org/114.114.114.114
 server=/bgctv.com/114.114.114.114
