--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14265,6 +14265,7 @@ server=/bhyby.com/114.114.114.114
 server=/bhycjdyp.com/114.114.114.114
 server=/bhyintan.com/114.114.114.114
 server=/bhyueda.com/114.114.114.114
+server=/bhyuu.com/114.114.114.114
 server=/bhzck.club/114.114.114.114
 server=/bhzck.xyz/114.114.114.114
 server=/bhzd88.com/114.114.114.114
