--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14283,6 +14283,7 @@ server=/bianbao.net/114.114.114.114
 server=/bianboshi88.com/114.114.114.114
 server=/biancheng.net/114.114.114.114
 server=/biancui.com/114.114.114.114
+server=/biandaosheng.com/114.114.114.114
 server=/biandouyun.com/114.114.114.114
 server=/biandown.com/114.114.114.114
 server=/bianeng.com/114.114.114.114
