--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14790,6 +14790,7 @@ server=/bizmoto.com/114.114.114.114
 server=/biznewscn.com/114.114.114.114
 server=/bizopsmall.com/114.114.114.114
 server=/bizpai.com/114.114.114.114
+server=/bizrotator.com/114.114.114.114
 server=/bizsn.com/114.114.114.114
 server=/bizsofts.com/114.114.114.114
 server=/bizvane.com/114.114.114.114
