--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14933,6 +14933,7 @@ server=/bjhaiguang.com/114.114.114.114
 server=/bjhdcp.com/114.114.114.114
 server=/bjhdhm.com/114.114.114.114
 server=/bjhdnet.com/114.114.114.114
+server=/bjhdrx.com/114.114.114.114
 server=/bjhee.com/114.114.114.114
 server=/bjhengchi.com/114.114.114.114
 server=/bjhengjia.net/114.114.114.114
