--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15085,6 +15085,7 @@ server=/bjsinglewindow.com/114.114.114.114
 server=/bjsj5.com/114.114.114.114
 server=/bjsjac.com/114.114.114.114
 server=/bjsjob.com/114.114.114.114
+server=/bjsjsch12333.com/114.114.114.114
 server=/bjsjsyly.com/114.114.114.114
 server=/bjsjwl.com/114.114.114.114
 server=/bjsjxtm.com/114.114.114.114
