--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15159,6 +15159,7 @@ server=/bjxcsy.net/114.114.114.114
 server=/bjxdfk.com/114.114.114.114
 server=/bjxf315.com/114.114.114.114
 server=/bjxhly.com/114.114.114.114
+server=/bjxiaohua.com/114.114.114.114
 server=/bjximei.com/114.114.114.114
 server=/bjxingma.com/114.114.114.114
 server=/bjxinku.com/114.114.114.114
