accelerated-domains: add bkuax.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15258,6 +15258,7 @@ server=/bkqq.com/114.114.114.114
 server=/bkt123.com/114.114.114.114
 server=/bktencent.com/114.114.114.114
 server=/bktsj.com/114.114.114.114
+server=/bkuax.com/114.114.114.114
 server=/bkvps.com/114.114.114.114
 server=/bkweek.com/114.114.114.114
 server=/bkzzy.com/114.114.114.114
