--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15273,6 +15273,7 @@ server=/blackeep.com/114.114.114.114
 server=/blackh4t.org/114.114.114.114
 server=/blackint3.com/114.114.114.114
 server=/blackluxury.com/114.114.114.114
+server=/blacksaltys.com/114.114.114.114
 server=/blackshark.com/114.114.114.114
 server=/blackshow.me/114.114.114.114
 server=/blackswancake.com/114.114.114.114
