accelerated-domains: add bogo777.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15578,6 +15578,7 @@ server=/bofengkj.com/114.114.114.114
 server=/bofyou.com/114.114.114.114
 server=/bog.ac/114.114.114.114
 server=/bogaochem.com/114.114.114.114
+server=/bogo777.com/114.114.114.114
 server=/bogokj.com/114.114.114.114
 server=/boguanpaimai.com/114.114.114.114
 server=/boguub.com/114.114.114.114
