--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15849,6 +15849,7 @@ server=/boyuonline.com/114.114.114.114
 server=/bozhihr.com/114.114.114.114
 server=/bozhihua.com/114.114.114.114
 server=/bozhong.com/114.114.114.114
+server=/bozifs.com/114.114.114.114
 server=/bp1w.com/114.114.114.114
 server=/bpaykwai.com/114.114.114.114
 server=/bpgjuice.net/114.114.114.114
