accelerated-domains: add brmnq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15922,6 +15922,7 @@ server=/brightliao.com/114.114.114.114
 server=/brire.com/114.114.114.114
 server=/britesemi.com/114.114.114.114
 server=/brlinked.com/114.114.114.114
+server=/brmnq.com/114.114.114.114
 server=/brmyx.com/114.114.114.114
 server=/broad-ocean.com/114.114.114.114
 server=/broad.com/114.114.114.114
