--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15962,6 +15962,7 @@ server=/bsbgjj.com/114.114.114.114
 server=/bsbkjt.com/114.114.114.114
 server=/bsbxyy.com/114.114.114.114
 server=/bsbydd.com/114.114.114.114
+server=/bscabank.com/114.114.114.114
 server=/bsccdn.com/114.114.114.114
 server=/bsccdn.net/114.114.114.114
 server=/bscdnd.com/114.114.114.114
