accelerated-domains: add bubuying.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16146,6 +16146,7 @@ server=/bubbb.com/114.114.114.114
 server=/bubugao.com/114.114.114.114
 server=/bubuko.com/114.114.114.114
 server=/bubuol.com/114.114.114.114
+server=/bubuying.net/114.114.114.114
 server=/bubuyouqian.com/114.114.114.114
 server=/bubuzheng.com/114.114.114.114
 server=/bubuzou.com/114.114.114.114
