accelerated-domains: add bululusexdoll.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16201,6 +16201,7 @@ server=/bulejie.com/114.114.114.114
 server=/bullcome.com/114.114.114.114
 server=/bullvet.net/114.114.114.114
 server=/buluanmai.com/114.114.114.114
+server=/bululusexdoll.com/114.114.114.114
 server=/bumenkeji.com/114.114.114.114
 server=/bumiu.com/114.114.114.114
 server=/bundpic.com/114.114.114.114
