--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16239,6 +16239,7 @@ server=/butjx.com/114.114.114.114
 server=/butongshe.com/114.114.114.114
 server=/butonly.com/114.114.114.114
 server=/butterapis.com/114.114.114.114
+server=/butterdogchange.com/114.114.114.114
 server=/buttonsintime.com/114.114.114.114
 server=/buxi100.com/114.114.114.114
 server=/buxia.net/114.114.114.114
