accelerated-domains: add buyu9918.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16276,6 +16276,7 @@ server=/buyu9913.com/114.114.114.114
 server=/buyu9914.com/114.114.114.114
 server=/buyu9916.com/114.114.114.114
 server=/buyu9917.com/114.114.114.114
+server=/buyu9918.com/114.114.114.114
 server=/buyu9920.com/114.114.114.114
 server=/buyu9923.com/114.114.114.114
 server=/buyu9924.com/114.114.114.114
