--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16277,6 +16277,7 @@ server=/buyu9914.com/114.114.114.114
 server=/buyu9916.com/114.114.114.114
 server=/buyu9917.com/114.114.114.114
 server=/buyu9918.com/114.114.114.114
+server=/buyu9919.com/114.114.114.114
 server=/buyu9920.com/114.114.114.114
 server=/buyu9923.com/114.114.114.114
 server=/buyu9924.com/114.114.114.114
