accelerated-domains: add buyu9921.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16279,6 +16279,7 @@ server=/buyu9917.com/114.114.114.114
 server=/buyu9918.com/114.114.114.114
 server=/buyu9919.com/114.114.114.114
 server=/buyu9920.com/114.114.114.114
+server=/buyu9921.com/114.114.114.114
 server=/buyu9923.com/114.114.114.114
 server=/buyu9924.com/114.114.114.114
 server=/buyu9927.com/114.114.114.114
