accelerated-domains: add buyu9926.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16282,6 +16282,7 @@ server=/buyu9920.com/114.114.114.114
 server=/buyu9921.com/114.114.114.114
 server=/buyu9923.com/114.114.114.114
 server=/buyu9924.com/114.114.114.114
+server=/buyu9926.com/114.114.114.114
 server=/buyu9927.com/114.114.114.114
 server=/buyu9928.com/114.114.114.114
 server=/buyu9929.com/114.114.114.114
