--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16301,6 +16301,7 @@ server=/buyu9943.com/114.114.114.114
 server=/buyu9946.com/114.114.114.114
 server=/buyu9947.com/114.114.114.114
 server=/buyu9948.com/114.114.114.114
+server=/buyu9949.com/114.114.114.114
 server=/buyu9950.com/114.114.114.114
 server=/buyu9951.com/114.114.114.114
 server=/buyu9952.com/114.114.114.114
