--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16324,6 +16324,7 @@ server=/buyu9974.com/114.114.114.114
 server=/buyu9976.com/114.114.114.114
 server=/buyu9979.com/114.114.114.114
 server=/buyu9980.com/114.114.114.114
+server=/buyu9981.com/114.114.114.114
 server=/buyu9983.com/114.114.114.114
 server=/buyu9984.com/114.114.114.114
 server=/buyueyuyun.com/114.114.114.114
