--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16328,6 +16328,7 @@ server=/buyu9981.com/114.114.114.114
 server=/buyu9982.com/114.114.114.114
 server=/buyu9983.com/114.114.114.114
 server=/buyu9984.com/114.114.114.114
+server=/buyu9986.com/114.114.114.114
 server=/buyueyuyun.com/114.114.114.114
 server=/buyun.co/114.114.114.114
 server=/buzao.net/114.114.114.114
