accelerated-domains: add buzz-stats.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16335,6 +16335,7 @@ server=/buzao.net/114.114.114.114
 server=/buzhi.com/114.114.114.114
 server=/buzhi5.com/114.114.114.114
 server=/buzhibushi.com/114.114.114.114
+server=/buzz-stats.com/114.114.114.114
 server=/bvfcdn.com/114.114.114.114
 server=/bvfcdn2.com/114.114.114.114
 server=/bvgv.com/114.114.114.114
