accelerated-domains: add bvcxd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16336,6 +16336,7 @@ server=/buzhi.com/114.114.114.114
 server=/buzhi5.com/114.114.114.114
 server=/buzhibushi.com/114.114.114.114
 server=/buzz-stats.com/114.114.114.114
+server=/bvcxd.com/114.114.114.114
 server=/bvfcdn.com/114.114.114.114
 server=/bvfcdn2.com/114.114.114.114
 server=/bvgv.com/114.114.114.114
