accelerated-domains: add byte00.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16500,6 +16500,7 @@ server=/byte-test.com/114.114.114.114
 server=/byte-test.net/114.114.114.114
 server=/byte.online/114.114.114.114
 server=/byte00.com/114.114.114.114
+server=/byte00.net/114.114.114.114
 server=/byte000.com/114.114.114.114
 server=/byte008.com/114.114.114.114
 server=/byteacct.com/114.114.114.114
