--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16733,6 +16733,7 @@ server=/c77c.com/114.114.114.114
 server=/c7878.com/114.114.114.114
 server=/c7c8.com/114.114.114.114
 server=/c833.com/114.114.114.114
+server=/c8uixr96iv79.com/114.114.114.114
 server=/c9018.com/114.114.114.114
 server=/c919.sbs/114.114.114.114
 server=/c969.com/114.114.114.114
