--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16901,6 +16901,7 @@ server=/caimomo.com/114.114.114.114
 server=/cainachina.com/114.114.114.114
 server=/caing.com/114.114.114.114
 server=/cainiao-inc.com/114.114.114.114
+server=/cainiao-inc.net/114.114.114.114
 server=/cainiao.com/114.114.114.114
 server=/cainiaobaoka.com/114.114.114.114
 server=/cainiaojc.com/114.114.114.114
