accelerated-domains: add cdcs34.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17697,6 +17697,7 @@ server=/cdcgames.net/114.114.114.114
 server=/cdchjyy.com/114.114.114.114
 server=/cdchuandong.com/114.114.114.114
 server=/cdcoslm.com/114.114.114.114
+server=/cdcs34.fun/114.114.114.114
 server=/cdcxhl.com/114.114.114.114
 server=/cdcxsd.com/114.114.114.114
 server=/cdcyts.com/114.114.114.114
