--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17878,6 +17878,7 @@ server=/cdnhwc5.com/114.114.114.114
 server=/cdnhwc6.com/114.114.114.114
 server=/cdnhwc8.com/114.114.114.114
 server=/cdnhwc9.com/114.114.114.114
+server=/cdnhwcajk17.com/114.114.114.114
 server=/cdnhwcatq08.com/114.114.114.114
 server=/cdnhwcbqs106.com/114.114.114.114
 server=/cdnhwcbzj102.com/114.114.114.114
