accelerated-domains: add cdnhwcedi10.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17885,6 +17885,7 @@ server=/cdnhwcbqs106.com/114.114.114.114
 server=/cdnhwcbzj102.com/114.114.114.114
 server=/cdnhwcchh18.com/114.114.114.114
 server=/cdnhwccmz121.com/114.114.114.114
+server=/cdnhwcedi10.com/114.114.114.114
 server=/cdnhwcedt124.com/114.114.114.114
 server=/cdnhwcggk22.com/114.114.114.114
 server=/cdnhwcgnc118.com/114.114.114.114
