accelerated-domains: add cdnhwcjlg112.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17892,6 +17892,7 @@ server=/cdnhwcgnc118.com/114.114.114.114
 server=/cdnhwcgqa21.com/114.114.114.114
 server=/cdnhwchcg02.com/114.114.114.114
 server=/cdnhwcibv122.com/114.114.114.114
+server=/cdnhwcjlg112.com/114.114.114.114
 server=/cdnhwcjog12.com/114.114.114.114
 server=/cdnhwcjsb120.com/114.114.114.114
 server=/cdnhwckfz116.com/114.114.114.114
