accelerated-domains: add cdnhwcllh11.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17898,6 +17898,7 @@ server=/cdnhwcjsb120.com/114.114.114.114
 server=/cdnhwckfz116.com/114.114.114.114
 server=/cdnhwckon103.com/114.114.114.114
 server=/cdnhwcljk104.com/114.114.114.114
+server=/cdnhwcllh11.com/114.114.114.114
 server=/cdnhwclxu105.com/114.114.114.114
 server=/cdnhwclxw05.com/114.114.114.114
 server=/cdnhwcoem01.com/114.114.114.114
