--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17908,6 +17908,7 @@ server=/cdnhwcprh113.com/114.114.114.114
 server=/cdnhwcpsd13.com/114.114.114.114
 server=/cdnhwcqgw115.com/114.114.114.114
 server=/cdnhwcqir15.com/114.114.114.114
+server=/cdnhwcqve117.com/114.114.114.114
 server=/cdnhwcqwg14.com/114.114.114.114
 server=/cdnhwctnm107.com/114.114.114.114
 server=/cdnhwctxz24.com/114.114.114.114
