accelerated-domains: add cdnhwcurq03.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17914,6 +17914,7 @@ server=/cdnhwctnm107.com/114.114.114.114
 server=/cdnhwctxz24.com/114.114.114.114
 server=/cdnhwcuim119.com/114.114.114.114
 server=/cdnhwcupf06.com/114.114.114.114
+server=/cdnhwcurq03.com/114.114.114.114
 server=/cdnhwcvix16.com/114.114.114.114
 server=/cdnhwcxcy07.com/114.114.114.114
 server=/cdnhwczba04.com/114.114.114.114
