accelerated-domains: add cdnhwcztu09.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17921,6 +17921,7 @@ server=/cdnhwczba04.com/114.114.114.114
 server=/cdnhwczjt20.com/114.114.114.114
 server=/cdnhwczmn114.com/114.114.114.114
 server=/cdnhwczth23.com/114.114.114.114
+server=/cdnhwcztu09.com/114.114.114.114
 server=/cdnhwczxh101.com/114.114.114.114
 server=/cdnidc.net/114.114.114.114
 server=/cdnjs8888.com/114.114.114.114
