--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17958,6 +17958,7 @@ server=/cdqcnt.com/114.114.114.114
 server=/cdqcp.com/114.114.114.114
 server=/cdqcw.net/114.114.114.114
 server=/cdqcxy.com/114.114.114.114
+server=/cdqjmc.com/114.114.114.114
 server=/cdqmw.net/114.114.114.114
 server=/cdqph.com/114.114.114.114
 server=/cdqss.com/114.114.114.114
