accelerated-domains: add cdscs990.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17976,6 +17976,7 @@ server=/cds-seal.com/114.114.114.114
 server=/cdsb.com/114.114.114.114
 server=/cdsb.mobi/114.114.114.114
 server=/cdscdscdn.com/114.114.114.114
+server=/cdscs990.fun/114.114.114.114
 server=/cdsenfa.com/114.114.114.114
 server=/cdsgsz.com/114.114.114.114
 server=/cdshangceng.com/114.114.114.114
