--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18007,6 +18007,7 @@ server=/cduncname.com/114.114.114.114
 server=/cdvcloud.com/114.114.114.114
 server=/cdvisor.com/114.114.114.114
 server=/cdweikebaba.com/114.114.114.114
+server=/cdweikebaba.xin/114.114.114.114
 server=/cdwulian.com/114.114.114.114
 server=/cdxczl.com/114.114.114.114
 server=/cdxrdz.com/114.114.114.114
