--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18049,6 +18049,7 @@ server=/cdzzxxe.com/114.114.114.114
 server=/ce-air.com/114.114.114.114
 server=/ce04.com/114.114.114.114
 server=/ce2293.com/114.114.114.114
+server=/ce33m7.com/114.114.114.114
 server=/ceair.com/114.114.114.114
 server=/ceairdutyfree.com/114.114.114.114
 server=/ceairgroup.com/114.114.114.114
