accelerated-domains: add ceeunion.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18091,6 +18091,7 @@ server=/cedock.com/114.114.114.114
 server=/ceeger.com/114.114.114.114
 server=/ceeji.net/114.114.114.114
 server=/ceepsp.com/114.114.114.114
+server=/ceeunion.com/114.114.114.114
 server=/cef114.com/114.114.114.114
 server=/ceggd.com/114.114.114.114
 server=/cehiy.com/114.114.114.114
