--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18157,6 +18157,7 @@ server=/centurytrip.com/114.114.114.114
 server=/cenvan.net/114.114.114.114
 server=/cenvandns.com/114.114.114.114
 server=/cenwan.com/114.114.114.114
+server=/cenwor.com/114.114.114.114
 server=/cenwoy.com/114.114.114.114
 server=/cenxilm.com/114.114.114.114
 server=/cenya.com/114.114.114.114
