accelerated-domains: add ceryt111.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18191,6 +18191,7 @@ server=/cersign.com/114.114.114.114
 server=/cersp.com/114.114.114.114
 server=/ceruchina.com/114.114.114.114
 server=/cervicalsurgeon.com/114.114.114.114
+server=/ceryt111.fun/114.114.114.114
 server=/ces-transaction.com/114.114.114.114
 server=/cesfn.com/114.114.114.114
 server=/cesfutures.com/114.114.114.114
