--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18240,6 +18240,7 @@ server=/cfd-china.com/114.114.114.114
 server=/cfd163.com/114.114.114.114
 server=/cfda.pub/114.114.114.114
 server=/cfdp.org/114.114.114.114
+server=/cfdvd779.fun/114.114.114.114
 server=/cfej.net/114.114.114.114
 server=/cfeks.com/114.114.114.114
 server=/cffote.com/114.114.114.114
