--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18300,6 +18300,7 @@ server=/cg-ku.com/114.114.114.114
 server=/cg-orz.com/114.114.114.114
 server=/cg009.com/114.114.114.114
 server=/cg100iii.com/114.114.114.114
+server=/cg2017.com/114.114.114.114
 server=/cg98.com/114.114.114.114
 server=/cg99.com/114.114.114.114
 server=/cgabc.xyz/114.114.114.114
