--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18307,6 +18307,7 @@ server=/cgabc.xyz/114.114.114.114
 server=/cgacar.com/114.114.114.114
 server=/cgadmob.com/114.114.114.114
 server=/cgahz.com/114.114.114.114
+server=/cgaij.com/114.114.114.114
 server=/cgangs.com/114.114.114.114
 server=/cgboo.com/114.114.114.114
 server=/cgcss.com/114.114.114.114
