--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18336,6 +18336,7 @@ server=/cgmxw.com/114.114.114.114
 server=/cgnjy.com/114.114.114.114
 server=/cgnmc.com/114.114.114.114
 server=/cgnne.com/114.114.114.114
+server=/cgoiiq.com/114.114.114.114
 server=/cgonet.com/114.114.114.114
 server=/cgown.com/114.114.114.114
 server=/cgpbatech.com/114.114.114.114
