--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18406,6 +18406,7 @@ server=/chacihai.com/114.114.114.114
 server=/chacuo.net/114.114.114.114
 server=/chadoc.com/114.114.114.114
 server=/chaej.com/114.114.114.114
+server=/chaelc.com/114.114.114.114
 server=/chafanhou.com/114.114.114.114
 server=/chafei.net/114.114.114.114
 server=/chagee.com/114.114.114.114
