--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18569,6 +18569,7 @@ server=/chanxuan.com/114.114.114.114
 server=/chanxuehezuo.com/114.114.114.114
 server=/chanzhi.org/114.114.114.114
 server=/chao-fan.com/114.114.114.114
+server=/chaoantv.com/114.114.114.114
 server=/chaoart.com/114.114.114.114
 server=/chaobohui.com/114.114.114.114
 server=/chaobus.com/114.114.114.114
