accelerated-domains: add chaoliangyun.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18593,6 +18593,7 @@ server=/chaokaixin.net/114.114.114.114
 server=/chaolady.com/114.114.114.114
 server=/chaolean.com/114.114.114.114
 server=/chaoliangkj.com/114.114.114.114
+server=/chaoliangyun.com/114.114.114.114
 server=/chaoliuguan.com/114.114.114.114
 server=/chaolongbus.com/114.114.114.114
 server=/chaoluoluo.com/114.114.114.114
