accelerated-domains: add chaorenjiaoshi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18603,6 +18603,7 @@ server=/chaonei.com/114.114.114.114
 server=/chaonenglu.com/114.114.114.114
 server=/chaopaiyizu.com/114.114.114.114
 server=/chaoren.com/114.114.114.114
+server=/chaorenjiaoshi.com/114.114.114.114
 server=/chaorenxiu.com/114.114.114.114
 server=/chaosec.com/114.114.114.114
 server=/chaoshanren.com/114.114.114.114
