--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18772,6 +18772,7 @@ server=/chemingpian.com/114.114.114.114
 server=/chemm.com/114.114.114.114
 server=/chemmade.com/114.114.114.114
 server=/chemnet.com/114.114.114.114
+server=/chemrc.com/114.114.114.114
 server=/chemsb.com/114.114.114.114
 server=/chemsrc.com/114.114.114.114
 server=/chemtour.com/114.114.114.114
