accelerated-domains: add chengruide.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18832,6 +18832,7 @@ server=/chengpeiquan.com/114.114.114.114
 server=/chengrang.com/114.114.114.114
 server=/chengrengaokaobaoming.com/114.114.114.114
 server=/chengrenjiaoyu1.com/114.114.114.114
+server=/chengruide.com/114.114.114.114
 server=/chengshidingxiang.com/114.114.114.114
 server=/chengshiguanjia.com/114.114.114.114
 server=/chengshijun.com/114.114.114.114
