--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18998,6 +18998,7 @@ server=/chianbaohan.com/114.114.114.114
 server=/chiang.fun/114.114.114.114
 server=/chibanting.com/114.114.114.114
 server=/chichuang.com/114.114.114.114
+server=/chicken18.com/114.114.114.114
 server=/chickfrp.com/114.114.114.114
 server=/chicopharm.com/114.114.114.114
 server=/chidaolian.com/114.114.114.114
