accelerated-domains: add chinaduo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19350,6 +19350,7 @@ server=/chinadra.com/114.114.114.114
 server=/chinadrtv.com/114.114.114.114
 server=/chinadrum.net/114.114.114.114
 server=/chinadsl.net/114.114.114.114
+server=/chinaduo.com/114.114.114.114
 server=/chinadyt.com/114.114.114.114
 server=/chinadz.com/114.114.114.114
 server=/chinadzfp.com/114.114.114.114
