accelerated-domains: add cibnlive.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20306,6 +20306,7 @@ server=/cibawl.com/114.114.114.114
 server=/cibfintech.com/114.114.114.114
 server=/cibn.cc/114.114.114.114
 server=/cibn.com/114.114.114.114
+server=/cibnlive.com/114.114.114.114
 server=/cibnott.net/114.114.114.114
 server=/cibntv.net/114.114.114.114
 server=/cibnvst.com/114.114.114.114
