--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20432,6 +20432,7 @@ server=/cirmall.com/114.114.114.114
 server=/cirrowings.com/114.114.114.114
 server=/cirs-reach.com/114.114.114.114
 server=/cirunzhang.com/114.114.114.114
+server=/ciscon.org/114.114.114.114
 server=/cismef.com/114.114.114.114
 server=/cisskwt.com/114.114.114.114
 server=/cistds.org/114.114.114.114
