--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20530,6 +20530,7 @@ server=/cjdropshipping.com/114.114.114.114
 server=/cjdsp.com/114.114.114.114
 server=/cjdx1.com/114.114.114.114
 server=/cjftb.com/114.114.114.114
+server=/cjgcedu.com/114.114.114.114
 server=/cjhb168.com/114.114.114.114
 server=/cjhospital.com/114.114.114.114
 server=/cjhxfund.com/114.114.114.114
