--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20534,6 +20534,7 @@ server=/cjgcedu.com/114.114.114.114
 server=/cjhb168.com/114.114.114.114
 server=/cjhospital.com/114.114.114.114
 server=/cjhxfund.com/114.114.114.114
+server=/cjieh.com/114.114.114.114
 server=/cjienc.com/114.114.114.114
 server=/cjiit.com/114.114.114.114
 server=/cjjd01.com/114.114.114.114
