accelerated-domains: add clfxjrlui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20686,6 +20686,7 @@ server=/clewm.net/114.114.114.114
 server=/clfcgc.com/114.114.114.114
 server=/clfdked.icu/114.114.114.114
 server=/clfile.com/114.114.114.114
+server=/clfxjrlui.com/114.114.114.114
 server=/clfzsn.com/114.114.114.114
 server=/clgcxs.com/114.114.114.114
 server=/clgslc.com/114.114.114.114
