--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20696,6 +20696,7 @@ server=/clhwzg.com/114.114.114.114
 server=/cli.im/114.114.114.114
 server=/clianjie.com/114.114.114.114
 server=/clickfuntech.com/114.114.114.114
+server=/clickkingdom.net/114.114.114.114
 server=/clicksdiy.com/114.114.114.114
 server=/clicksun.net/114.114.114.114
 server=/clickwifi.net/114.114.114.114
