accelerated-domains: add cm-analysis.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20958,6 +20958,7 @@ server=/clzqxp.com/114.114.114.114
 server=/clzt.com/114.114.114.114
 server=/clzxqc.com/114.114.114.114
 server=/clzyqche.com/114.114.114.114
+server=/cm-analysis.com/114.114.114.114
 server=/cm-iov.com/114.114.114.114
 server=/cm-worklink.com/114.114.114.114
 server=/cm1881.com/114.114.114.114
