accelerated-domains: add cmp288.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21053,6 +21053,7 @@ server=/cmoct.com/114.114.114.114
 server=/cmodel.com/114.114.114.114
 server=/cmodes.com/114.114.114.114
 server=/cmol.com/114.114.114.114
+server=/cmp288.com/114.114.114.114
 server=/cmpassport.com/114.114.114.114
 server=/cmpay.com/114.114.114.114
 server=/cmpe360.com/114.114.114.114
