accelerated-domains: add cncnails.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21269,6 +21269,7 @@ server=/cncms.com/114.114.114.114
 server=/cncmun.com/114.114.114.114
 server=/cncn.com/114.114.114.114
 server=/cncn.net/114.114.114.114
+server=/cncnails.net/114.114.114.114
 server=/cncnbd.com/114.114.114.114
 server=/cncncloud.com/114.114.114.114
 server=/cncncn.com/114.114.114.114
