accelerated-domains: add cnjp-exp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21496,6 +21496,7 @@ server=/cnjob.com/114.114.114.114
 server=/cnjournals.com/114.114.114.114
 server=/cnjournals.net/114.114.114.114
 server=/cnjournals.org/114.114.114.114
+server=/cnjp-exp.com/114.114.114.114
 server=/cnjpetr.org/114.114.114.114
 server=/cnjrna.com/114.114.114.114
 server=/cnjtjtss.com/114.114.114.114
