accelerated-domains: add codezh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21960,6 +21960,7 @@ server=/codewd.com/114.114.114.114
 server=/codeweblog.com/114.114.114.114
 server=/codewoody.com/114.114.114.114
 server=/codex-watch.com/114.114.114.114
+server=/codezh.com/114.114.114.114
 server=/codezyw.com/114.114.114.114
 server=/codigoscript.com/114.114.114.114
 server=/coding-newsletter.com/114.114.114.114
