accelerated-domains: add cs12d.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22797,6 +22797,7 @@ server=/cs-video.com/114.114.114.114
 server=/cs0799.com/114.114.114.114
 server=/cs090.com/114.114.114.114
 server=/cs12333.com/114.114.114.114
+server=/cs12d.com/114.114.114.114
 server=/cs27.com/114.114.114.114
 server=/cs2c.com/114.114.114.114
 server=/cs2ccloud.com/114.114.114.114
