accelerated-domains: add csfds000.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22845,6 +22845,7 @@ server=/csemc.com/114.114.114.114
 server=/cserveriip.com/114.114.114.114
 server=/cserwen.com/114.114.114.114
 server=/cseve.com/114.114.114.114
+server=/csfds000.fun/114.114.114.114
 server=/csflgg.com/114.114.114.114
 server=/csfounder.com/114.114.114.114
 server=/csfreezer.com/114.114.114.114
