accelerated-domains: add ctyun.online

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23127,6 +23127,7 @@ server=/ctycdn.net/114.114.114.114
 server=/ctyny.com/114.114.114.114
 server=/ctyo.com/114.114.114.114
 server=/ctyun.net/114.114.114.114
+server=/ctyun.online/114.114.114.114
 server=/ctyuncdn.net/114.114.114.114
 server=/ctzcdn.com/114.114.114.114
 server=/ctzg.com/114.114.114.114
