accelerated-domains: add cuoss.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23196,6 +23196,7 @@ server=/cunzj.com/114.114.114.114
 server=/cuobiezi.net/114.114.114.114
 server=/cuonc.com/114.114.114.114
 server=/cuopen.net/114.114.114.114
+server=/cuoss.com/114.114.114.114
 server=/cuour-edu.com/114.114.114.114
 server=/cuour.com/114.114.114.114
 server=/cuour.org/114.114.114.114
