accelerated-domains: add cvdfvdfv90.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23233,6 +23233,7 @@ server=/cvc898cvc.com/114.114.114.114
 server=/cvchina.info/114.114.114.114
 server=/cvchome.com/114.114.114.114
 server=/cvcri.com/114.114.114.114
+server=/cvdfvdfv90.fun/114.114.114.114
 server=/cvftc.net/114.114.114.114
 server=/cvicse.com/114.114.114.114
 server=/cvicseks.com/114.114.114.114
