accelerated-domains: add cwbaike.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23249,6 +23249,7 @@ server=/cvte.com/114.114.114.114
 server=/cvtoutiao.com/114.114.114.114
 server=/cvtvcn.com/114.114.114.114
 server=/cwan.com/114.114.114.114
+server=/cwbaike.com/114.114.114.114
 server=/cwbpsi.com/114.114.114.114
 server=/cwddd.com/114.114.114.114
 server=/cwdma.org/114.114.114.114
