accelerated-domains: add cwmlm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23262,6 +23262,7 @@ server=/cwhnh.com/114.114.114.114
 server=/cwlchina.com/114.114.114.114
 server=/cwliupaotea.com/114.114.114.114
 server=/cwmcs.com/114.114.114.114
+server=/cwmlm.com/114.114.114.114
 server=/cwq.com/114.114.114.114
 server=/cwtc.com/114.114.114.114
 server=/cwxzx.com/114.114.114.114
