accelerated-domains: add d9ad.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23683,6 +23683,7 @@ server=/d80438960.com/114.114.114.114
 server=/d86.xyz/114.114.114.114
 server=/d8th.com/114.114.114.114
 server=/d99net.net/114.114.114.114
+server=/d9ad.com/114.114.114.114
 server=/d9ym.com/114.114.114.114
 server=/da-qian.com/114.114.114.114
 server=/da-quan.net/114.114.114.114
