accelerated-domains: add datouniao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24260,6 +24260,7 @@ server=/datianmen.com/114.114.114.114
 server=/datingmryuck.com/114.114.114.114
 server=/datk.anythinktech.com/114.114.114.114
 server=/datongtaxi.com/114.114.114.114
+server=/datouniao.com/114.114.114.114
 server=/datuc.com/114.114.114.114
 server=/datwy.com/114.114.114.114
 server=/dav01.com/114.114.114.114
