accelerated-domains: add dbiej.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24416,6 +24416,7 @@ server=/dbcxz1.net/114.114.114.114
 server=/dbdna.com/114.114.114.114
 server=/dbgeek.org/114.114.114.114
 server=/dbh123.net/114.114.114.114
+server=/dbiej.com/114.114.114.114
 server=/dbkan.com/114.114.114.114
 server=/dbkuaizi.com/114.114.114.114
 server=/dblgf.com/114.114.114.114
