accelerated-domains: add dfhgry.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24939,6 +24939,7 @@ server=/dfggq.com/114.114.114.114
 server=/dfgiso.com/114.114.114.114
 server=/dfgsb.com/114.114.114.114
 server=/dfham.com/114.114.114.114
+server=/dfhgry.com/114.114.114.114
 server=/dfhon.com/114.114.114.114
 server=/dfhrc.com/114.114.114.114
 server=/dfhtjn.com/114.114.114.114
