accelerated-domains: add dg-paas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25004,6 +25004,7 @@ server=/dg-360lhx.com/114.114.114.114
 server=/dg-hanxin.com/114.114.114.114
 server=/dg-mall.com/114.114.114.114
 server=/dg-niuniu.com/114.114.114.114
+server=/dg-paas.com/114.114.114.114
 server=/dg11185.com/114.114.114.114
 server=/dg114.com/114.114.114.114
 server=/dg121.com/114.114.114.114
