accelerated-domains: add dhaof.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25136,6 +25136,7 @@ server=/dh883.com/114.114.114.114
 server=/dh9191.com/114.114.114.114
 server=/dh978.com/114.114.114.114
 server=/dhaitun.com/114.114.114.114
+server=/dhaof.com/114.114.114.114
 server=/dhasgf.com/114.114.114.114
 server=/dhb.hk/114.114.114.114
 server=/dhb168.com/114.114.114.114
