accelerated-domains: add dhaxhsa325.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25138,6 +25138,7 @@ server=/dh978.com/114.114.114.114
 server=/dhaitun.com/114.114.114.114
 server=/dhaof.com/114.114.114.114
 server=/dhasgf.com/114.114.114.114
+server=/dhaxhsa325.com/114.114.114.114
 server=/dhb.hk/114.114.114.114
 server=/dhb168.com/114.114.114.114
 server=/dhboy.com/114.114.114.114
