accelerated-domains: add dhlmyorder82662-info-can.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25155,6 +25155,7 @@ server=/dhkq120.com/114.114.114.114
 server=/dhkqmz.com/114.114.114.114
 server=/dhkqyy.com/114.114.114.114
 server=/dhl-ch.com/114.114.114.114
+server=/dhlmyorder82662-info-can.com/114.114.114.114
 server=/dhmeri.com/114.114.114.114
 server=/dhmsnyy.com/114.114.114.114
 server=/dhppa.com/114.114.114.114
