accelerated-domains: add dhrest2.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25162,6 +25162,7 @@ server=/dhppa.com/114.114.114.114
 server=/dhqtech.com/114.114.114.114
 server=/dhrcbank.com/114.114.114.114
 server=/dhrest.com/114.114.114.114
+server=/dhrest2.com/114.114.114.114
 server=/dhs-sports.com/114.114.114.114
 server=/dhsky.org/114.114.114.114
 server=/dhsrmyy.com/114.114.114.114
